[package]
name = "bitcoin-tools"
version = "0.1.0"
authors = ["ilerik <erik.lite@gmail.com>"]

[[bin]]
name = "genaddress"
path = "src/bin/genaddress.rs"

[[bin]]
name = "blockdetails"
path = "src/bin/blockdetails.rs"

[dependencies]
bitcoin="0.9"
secp256k1 = "0.6"
rand="0.3.15"
clap = "2.19.2" # command line arguments parsing library
env_logger = "0.3.5"
futures = "0.1"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }
rustc-serialize = "0.3.22"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"  # just for the JSON serialization, not required in general
regex = "0.1.80" # regular expressions library
